--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Stylesheet" href="Style/style.css">
     <title>Taller Eventos</title>
 </head>
 <body>
+    <div id="el_div">
+        <button onclick="alert('Hola')">Saludar</button>
+    </div>
 
-    <button onclick="alert('Hola')">Saludar</button>
-    
 </body>
+<script src="JS/eventos.js"></script>
 </html>
