Solucion al problema de los dos eventos con un mismo click

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Taller Eventos</title>
 </head>
 <body>
-    <div id="el_div">
-        <button onclick="alert('Hola')">Saludar</button>
+    <div class="el_div">
+        <button id="boton">Saludar</button>
     </div>
 
 </body>
